--- a/source/includes/4.2-upgrade-replacements.rst
+++ b/source/includes/4.2-upgrade-replacements.rst
@@ -9,5 +9,5 @@
 .. |features| replace:: :ref:`features<4.2-compatibility-enabled>` 
 .. |downgradeversion| replace:: 4.0
 
-.. |installationdoc| replace:: :doc:`4.2 installation instructions </installation>`
+.. |installationdoc| replace:: :ref:`4.2 installation instructions <tutorial-installation>`
 
