--- a/source/includes/4.4-upgrade-replacements.rst
+++ b/source/includes/4.4-upgrade-replacements.rst
@@ -10,7 +10,7 @@
 .. |features| replace:: :ref:`features<4.4-compatibility-enabled>` 
 .. |downgradeversion| replace:: 4.2
 
-.. |installationdoc| replace:: :doc:`4.4 installation instructions </installation>`
+.. |installationdoc| replace:: :ref:`4.4 installation instructions <tutorial-installation>`
 
 .. |newfcv| replace:: ``"4.4"``
 .. |oldfcv| replace:: ``"4.2"``
