--- a/source/includes/5.0-upgrade-replacements.rst
+++ b/source/includes/5.0-upgrade-replacements.rst
@@ -10,7 +10,7 @@
 .. |features| replace:: :ref:`features<5.0-compatibility-enabled>` 
 .. |downgradeversion| replace:: 4.4
 
-.. |installationdoc| replace:: :doc:`5.0 installation instructions </installation>`
+.. |installationdoc| replace:: :ref:`5.0 installation instructions <tutorial-installation>`
 
 .. |newfcv| replace:: ``"5.0"``
 .. |oldfcv| replace:: ``"4.4"``
