--- a/source/includes/6.0-upgrade-replacements.rst
+++ b/source/includes/6.0-upgrade-replacements.rst
@@ -10,7 +10,7 @@
 .. |features| replace:: :ref:`features<6.0-downgrade-considerations>` 
 .. |downgradeversion| replace:: 5.0
 
-.. |installationdoc| replace:: :doc:`6.0 installation instructions </installation>`
+.. |installationdoc| replace:: :ref:`6.0 installation instructions <tutorial-installation>`
 
 .. |newfcv| replace:: ``"6.0"``
 .. |oldfcv| replace:: ``"5.0"``
