(DOCS-15741): Finalize 4.4.18 changelog (#2160)

--- a/source/includes/changelogs/releases/4.4.18.rst
+++ b/source/includes/changelogs/releases/4.4.18.rst
@@ -51,6 +51,8 @@ Internals
   AutoSplitVector
 - :issue:`SERVER-68470` Amazon Linux 4.2/4.4 RPMs fail to install due to
   missing shadow-utils
+- :issue:`SERVER-69001` Initial sync should set the minValid document to
+  the "stopTimestamp"
 - :issue:`SERVER-69003` [4.4] backport pm-2419 Per Shard Cursors via
   mongos
 - :issue:`SERVER-69133` remove redundant setting of hardlink install
@@ -70,6 +72,8 @@ Internals
 - :issue:`SERVER-69868` Return an error when starting a TransportLayer
   that is shutdown
 - :issue:`SERVER-69912` SConstruct is executable by mistake
+- :issue:`SERVER-70235` Don't create range deletion documents upon
+  v4.2-v4.4 upgrade in case of collection uuid mismatch
 - :issue:`SERVER-70299` Remove JSON.send command usage
 - :issue:`SERVER-70348` Remove EAGAIN for queryable WT and retry
   internally
