DOCSP-26955 standardize on ID (#2245)
* DOCSP-26955 standardiz on ID

* DOCSP-26955 standardize on ID

--- a/source/includes/changelogs/releases/3.2.10.rst
+++ b/source/includes/changelogs/releases/3.2.10.rst
@@ -52,7 +52,7 @@ WiredTiger
 - :issue:`WT-2221` Document which statistics are available via a "fast" configuration vs. an "all" configuration
 - :issue:`WT-2233` Investigate changing when the eviction server switches to aggressive mode.
 - :issue:`WT-2239` Make sure LSM cursors read up to date dsk_gen, it was racing with compact
-- :issue:`WT-2323` Allocate a transaction id at the beginning of join cursor iteration
+- :issue:`WT-2323` Allocate a transaction ID at the beginning of join cursor iteration
 - :issue:`WT-2843` Fix a bug in recovery if there is no filesystem truncate support
 - :issue:`WT-2846` Several bugs related to reconfiguring eviction server at runtime
 - :issue:`WT-2353` Failure to create async threads as part of a wiredtiger_open call will cause a hang
