--- a/source/includes/changelogs/releases/3.6.18.rst
+++ b/source/includes/changelogs/releases/3.6.18.rst
@@ -67,7 +67,7 @@ Internals
 - :issue:`SERVER-43349` Incorrect serialization for $elemMatch $not $ne
 - :issue:`SERVER-44325` Add polyfill for certificate chain verification
 - :issue:`SERVER-44435` Allow x509 authorization to be selectively enabled based on the CA
-- :issue:`SERVER-44868` Initialsync logkeeper and logkeeper-short tests should pass snapshot id and dataset link respectively to dsi(sys-perf)
+- :issue:`SERVER-44868` Initialsync logkeeper and logkeeper-short tests should pass snapshot ID and dataset link respectively to dsi(sys-perf)
 - :issue:`SERVER-45156` SockAddr constructor should take sockaddr, not sockaddr_storage
 - :issue:`SERVER-45472` Ensure RoleGraph can serialize authentication restrictions to BSON
 - :issue:`SERVER-45766` Remove "requires" from the server yaml
