--- a/source/includes/changelogs/releases/3.6.4.rst
+++ b/source/includes/changelogs/releases/3.6.4.rst
@@ -27,7 +27,7 @@ Replication
 - :issue:`SERVER-31399` repl.apply.batches.totalMillis does not record the time spent applying batches
 - :issue:`SERVER-31666` catchup_takeover_one_high_priority should use initiateWithAnyNodeAsPrimary
 - :issue:`SERVER-31669` Increase the election timeout in case 3 of catchup.js
-- :issue:`SERVER-32776` Refresh rollback id cache on increment
+- :issue:`SERVER-32776` Refresh rollback ID cache on increment
 - :issue:`SERVER-33448` Relax time diff requirements in apply_batches_totalMillis.js
 - :issue:`SERVER-33618` Initial sync should consider applyOps a CrudOpType
 
