--- a/source/includes/changelogs/releases/3.6.9.rst
+++ b/source/includes/changelogs/releases/3.6.9.rst
@@ -25,7 +25,7 @@ Sharding
 - :issue:`SERVER-37496` The balancer shouldn't register a shutdown task after the process is multithreaded
 - :issue:`SERVER-37631` Disable logical sessions if FCV is 3.4
 - :issue:`SERVER-37657` Report the offending oplog entries if a batch contains non-increasing transaction numbers
-- :issue:`SERVER-37735` [3.6] Ensure the full logical session id is included in commands sent by the ShardingTaskExecutor
+- :issue:`SERVER-37735` [3.6] Ensure the full logical session ID is included in commands sent by the ShardingTaskExecutor
 
 Replication
 ~~~~~~~~~~~
@@ -84,7 +84,7 @@ Storage
 Operations
 ~~~~~~~~~~
 
-- :issue:`SERVER-32064` A logical session id should be included in all command requests from the mongo shell
+- :issue:`SERVER-32064` A logical session ID should be included in all command requests from the mongo shell
 - :issue:`SERVER-33606` mongo shell startSession() should fail if the server doesn't support logical sessions
 - :issue:`SERVER-34864` String-valued fields should not participate in schema change detection in ftdc
 
