--- a/source/includes/changelogs/releases/4.0.1.rst
+++ b/source/includes/changelogs/releases/4.0.1.rst
@@ -98,7 +98,7 @@ Operations
 ~~~~~~~~~~
 
 - :issue:`SERVER-27264` With net.ssl.allowConnectionsWithoutCertificates: true, allow disabling no client certificate log warnings
-- :issue:`SERVER-32064` A logical session id should be included in all command requests from the mongo shell
+- :issue:`SERVER-32064` A logical session ID should be included in all command requests from the mongo shell
 - :issue:`SERVER-34160` Mongo client run buffered command when terminated.
 - :issue:`SERVER-35758` Mongo shell prompt errors when running transactions after overriding "db"
 - :issue:`SERVER-35903` Free monitoring doesn't allow disabling from the shell without enabling it first
