--- a/source/includes/changelogs/releases/4.0.14.rst
+++ b/source/includes/changelogs/releases/4.0.14.rst
@@ -118,7 +118,7 @@ Internals
 - :issue:`SERVER-44568` Update the embedded version of the server's timezone data file to tzdb-2019c
 - :issue:`SERVER-44651` Update signal processing version
 - :issue:`SERVER-44727` detect-changes should not be called via run-dsi
-- :issue:`SERVER-44868` Initialsync logkeeper and logkeeper-short tests should pass snapshot id and dataset link respectively to dsi(sys-perf)
+- :issue:`SERVER-44868` Initialsync logkeeper and logkeeper-short tests should pass snapshot ID and dataset link respectively to dsi(sys-perf)
 - :issue:`SERVER-44946` Reenable tests disabled in BACKPORT-4512
 - :issue:`WT-4499` Fix prepared transactions for cursor key order check failure 
 - :issue:`WT-4520` Fix prepare transactions fallout during cursor navigation
