--- a/source/includes/changelogs/releases/4.0.20.rst
+++ b/source/includes/changelogs/releases/4.0.20.rst
@@ -75,7 +75,7 @@ Internals
 - :issue:`SERVER-48514` Separate testing 'called' and 'successful' fields for serverStatus election metrics
 - :issue:`SERVER-48569` Add ConflictingOperationInProgress as acceptable error code to stepDown in validateCollectionsCallback
 - :issue:`SERVER-48657` Use evergreen module to control signal processing in perf projects
-- :issue:`SERVER-49007` Roundtrip registration id in metrics response in mock_http_server.py
+- :issue:`SERVER-49007` Roundtrip registration ID in metrics response in mock_http_server.py
 - :issue:`SERVER-49071` Make ldap_fastest_host_selection.js tolerate missing LDAP servers in statistics
 - :issue:`SERVER-49142` Validate correct field name in RoleName::parseFromBSON()
 - :issue:`SERVER-49335` publish_packages should use barque API key
