--- a/source/includes/changelogs/releases/4.0.21.rst
+++ b/source/includes/changelogs/releases/4.0.21.rst
@@ -91,6 +91,6 @@ Internals
 - :issue:`SERVER-51802` Add requires_majority_read_concern tag to decrypt_tool.js on v4.0
 - :issue:`TOOLS-2589` [v4.0] sslAllowInvalidHostnames bypass ssl/tls server certification validation entirely
 - :issue:`WT-6421` Avoid parsing metadata checkpoint for clean files
-- :issue:`WT-6559` Use the session id from the new session to determine statistics bucket
+- :issue:`WT-6559` Use the session ID from the new session to determine statistics bucket
 - :issue:`WT-6598` Add new API allowing changing dhandle hash bucket size
 
