--- a/source/includes/changelogs/releases/4.2.1.rst
+++ b/source/includes/changelogs/releases/4.2.1.rst
@@ -19,7 +19,7 @@ Sharding
 - :issue:`SERVER-33973` Commands to force cleanup of partial data that might have remained after failed collection/database drop
 - :issue:`SERVER-36222` call to ReplSetTest.restart in shard_identity_rollback.js is racy
 - :issue:`SERVER-36315` After stepdown the CSRS dist lock manager keeps trying to unlock locks
-- :issue:`SERVER-39573` Add unique id to log label "TransactionCoordinator"
+- :issue:`SERVER-39573` Add unique ID to log label "TransactionCoordinator"
 - :issue:`SERVER-39763` transactions_target_at_point_in_time.js should disable expiring old chunk history
 - :issue:`SERVER-40258` Relax locking requirements for sharding metadata refresh on shards
 - :issue:`SERVER-40496` transactions_snapshot_errors_subsequent_statements.js and transactions_writes_not_retryable.js should not use mode {times: 1} for failpoint
