--- a/source/includes/changelogs/releases/4.2.10.rst
+++ b/source/includes/changelogs/releases/4.2.10.rst
@@ -85,7 +85,7 @@ Internals
 - :issue:`WT-6215` Clear backup block information on rename: Reverted
 - :issue:`WT-6421` Avoid parsing metadata checkpoint for clean files
 - :issue:`WT-6539` Fix backup and rename memory leak
-- :issue:`WT-6559` Use the session id from the new session to determine statistics bucket
+- :issue:`WT-6559` Use the session ID from the new session to determine statistics bucket
 - :issue:`WT-6598` Add new API allowing changing dhandle hash bucket size
 - :issue:`WT-6610` Fix incremental backup checkpoint parsing to handle upgrades
 - :issue:`WT-6611` Revert enhancement allowing rename and incremental backup
