--- a/source/includes/changelogs/releases/4.2.12.rst
+++ b/source/includes/changelogs/releases/4.2.12.rst
@@ -57,7 +57,7 @@ Build and Packaging
 Internals
 ~~~~~~~~~
 
-- :issue:`SERVER-41836` Log thread Id as part of error in FSM tests
+- :issue:`SERVER-41836` Log thread ID as part of error in FSM tests
 - :issue:`SERVER-43739` SNI name is not set on OSX if allowInvalidHostnames is enabled
 - :issue:`SERVER-44375` fix merge_with_drop_shard.js when the curop command fails due to ShardNotFound
 - :issue:`SERVER-47863` Initial Sync Progress Metrics
