--- a/source/includes/changelogs/releases/4.2.2.rst
+++ b/source/includes/changelogs/releases/4.2.2.rst
@@ -144,7 +144,7 @@ Internals
 - :issue:`SERVER-44651` Update signal processing version
 - :issue:`SERVER-44721` Shell KMS AWS support cannot decrypt responses
 - :issue:`SERVER-44727` detect-changes should not be called via run-dsi
-- :issue:`SERVER-44868` Initialsync logkeeper and logkeeper-short tests should pass snapshot id and dataset link respectively to dsi(sys-perf)
+- :issue:`SERVER-44868` Initialsync logkeeper and logkeeper-short tests should pass snapshot ID and dataset link respectively to dsi(sys-perf)
 - :issue:`WT-4486` Number of syncs did not increase in dirty max test 
 - :issue:`WT-4565` Fix tree walk code with read-no-wait flag set
 - :issue:`WT-4702` Switch to ubuntu1804-test Evergreen distro
