--- a/source/includes/changelogs/releases/4.2.9.rst
+++ b/source/includes/changelogs/releases/4.2.9.rst
@@ -99,7 +99,7 @@ Internals
 - :issue:`SERVER-48657` Use evergreen module to control signal processing in perf projects
 - :issue:`SERVER-48891` nullptr dereference on ViewCatalog in reIndex when Database does not exist 
 - :issue:`SERVER-48907` Allow users to patch test changes to linkbench/linkbench2 using evergreen set-module
-- :issue:`SERVER-49007` Roundtrip registration id in metrics response in mock_http_server.py
+- :issue:`SERVER-49007` Roundtrip registration ID in metrics response in mock_http_server.py
 - :issue:`SERVER-49071` Make ldap_fastest_host_selection.js tolerate missing LDAP servers in statistics
 - :issue:`SERVER-49097` sys-perf builds differ from release builds
 - :issue:`SERVER-49142` Validate correct field name in RoleName::parseFromBSON()
