--- a/source/includes/changelogs/releases/4.4.1.rst
+++ b/source/includes/changelogs/releases/4.4.1.rst
@@ -144,7 +144,7 @@ Internals
 - :issue:`SERVER-48952` logv2 cleanup for src/mongo/util/stacktrace_posix.cpp
 - :issue:`SERVER-48965` Make update_and_bulk_insert.js less heavy
 - :issue:`SERVER-48982` Respond to heartbeats until reconfig thread finishes in StepdownShouldInterruptConfigWrite
-- :issue:`SERVER-49007` Roundtrip registration id in metrics response in mock_http_server.py
+- :issue:`SERVER-49007` Roundtrip registration ID in metrics response in mock_http_server.py
 - :issue:`SERVER-49016` Ninja build reporting "no such file: /proc/cpuinfo"
 - :issue:`SERVER-49026` pseudo_commands.js can kill operation with opId '1234' mistakenly
 - :issue:`SERVER-49054` Server MSI should install Compass instead of Compass Community
@@ -207,5 +207,5 @@ Internals
 - :issue:`WT-6552` Fix configure flags in evergreen.yml for failing PPC tests
 - :issue:`WT-6578` Prevent reconciliation from looking past the on-disk value
 - :issue:`WT-6611` Revert enhancement allowing rename and incremental backup
-- :issue:`WT-6623` Set the connection level file id in recovery file scan
+- :issue:`WT-6623` Set the connection level file ID in recovery file scan
 
