--- a/source/includes/changelogs/releases/4.4.2.rst
+++ b/source/includes/changelogs/releases/4.4.2.rst
@@ -255,7 +255,7 @@ Internals
 - :issue:`WT-6544` Onpage value not appended to the tombstone restored from the data or history store
 - :issue:`WT-6546` Update fast truncate to use newest start durable ts
 - :issue:`WT-6556` Fix internal sessions to use internal session close function than public API to avoid memory leak
-- :issue:`WT-6559` Use the session id from the new session to determine statistics bucket
+- :issue:`WT-6559` Use the session ID from the new session to determine statistics bucket
 - :issue:`WT-6560` Fix usage of global salvage in WT utility
 - :issue:`WT-6561` Provide MongoDB configuration in the wt utility usage output
 - :issue:`WT-6569` Squash the prepared updates into a single update before writing it to data store
