--- a/source/includes/changelogs/releases/4.4.5.rst
+++ b/source/includes/changelogs/releases/4.4.5.rst
@@ -183,7 +183,7 @@ Internals
 - :issue:`WT-7183` Sort test filenames in test coverage document
 - :issue:`WT-7184` Prevent non-ASCII input in doc files
 - :issue:`WT-7192` Fix failing assert when in-use dhandle can't be reopened
-- :issue:`WT-7200` Incorrect stop transaction id when fixing out of order timestamps in history store
+- :issue:`WT-7200` Incorrect stop transaction ID when fixing out of order timestamps in history store
 - :issue:`WT-7202` Check for no count in assertion
 - :issue:`WT-7206` Update test framework to align with C++ style
 - :issue:`WT-7208` Leave table cursor in a valid state when subordinate index fails to open
