--- a/source/includes/changelogs/releases/4.4.7.rst
+++ b/source/includes/changelogs/releases/4.4.7.rst
@@ -322,7 +322,7 @@ Internals
 - :issue:`WT-7545` Limit upgrade/downgrade testing to timestamp transactions at snapshot isolation
 - :issue:`WT-7546` Coverity: Minor issues in CppSuite test harness
 - :issue:`WT-7548` Create macro to identify dhandles directly associated with a Btree
-- :issue:`WT-7549` clean up block manager identifiers to use object id naming
+- :issue:`WT-7549` clean up block manager identifiers to use object ID naming
 - :issue:`WT-7550` Properly check pinned page and fix not resetting cursor if error
 - :issue:`WT-7565` Update invalid backup configurations
 - :issue:`WT-7566` Resolve write after free for dead dhandle
@@ -333,7 +333,7 @@ Internals
 - :issue:`WT-7577` Add sync configuration to flush_tier
 - :issue:`WT-7579` Disable prefix testing in compatibility test due to snapshot isolation search mismatch
 - :issue:`WT-7581` Make wt_cache_config args consistent with other config functions
-- :issue:`WT-7588` Make tiered object id numbers 32 bits
+- :issue:`WT-7588` Make tiered object ID numbers 32 bits
 - :issue:`WT-7594` Use key_consistent mode on format TS runs
 - :issue:`WT-7595` Add flag to history store cursor to track whether underlying table insertion was successful
 - :issue:`WT-7602` Fix MacOS CMake Compilation Issues
