--- a/source/includes/changelogs/releases/3.4.19.rst
+++ b/source/includes/changelogs/releases/3.4.19.rst
@@ -65,7 +65,7 @@ Internals
 ~~~~~~~~~
 
 - :issue:`SERVER-18985` setParameter should log at level 0
-- :issue:`SERVER-23818` Include Evergreen task id in metadata sent to logkeeper
+- :issue:`SERVER-23818` Include Evergreen task ID in metadata sent to logkeeper
 - :issue:`SERVER-36250` Add support for optionally logging specific negotiated TLS versions 
 - :issue:`SERVER-37120` Turn off linux-replSet-initialsync-logkeeper Build Variant for 3.4 and 3.6 branches
 - :issue:`SERVER-37647` Validation hook sets FCV to 3.4 no matter what version it currently is
