--- a/source/includes/changelogs/releases/4.0.3.rst
+++ b/source/includes/changelogs/releases/4.0.3.rst
@@ -53,7 +53,7 @@ Query
 ~~~~~
 
 - :issue:`SERVER-13946` Consider putting skip stages below fetch stages
-- :issue:`SERVER-36212` getMore should not enforce that session id matches until FCV is 4.0
+- :issue:`SERVER-36212` getMore should not enforce that session ID matches until FCV is 4.0
 - :issue:`SERVER-36299` Implement support for exhaust cursors with OP_MSG in DBClientCursor
 - :issue:`SERVER-36435` Increase maxTimeMS timeout in awaitdata_getmore_cmd.js
 - :issue:`SERVER-36453` Fix race condition in aggregation_cursor_invalidations.js
