DOCS-15651 update opLatencies (#2272)
* DOCS-15651 update opLatencies

* removing only for mongodb verbiage

* update fact-latencystats-reference.rst

* additional cleanup

* adding 6.2 to TOC

* bump snooty.toml

* update latest RR

* ]

* release note edit

* inclusive footnote

* footnote

* 1

* rns

* Update release-notes.txt

--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -9,12 +9,13 @@ information on types of MongoDB releases, see
 
 To see changes in MongoDB releases, see the following release notes.
 
-Upcoming Rapid Release
-~~~~~~~~~~~~~~~~~~~~~~
+Upcoming Rapid Releases
+~~~~~~~~~~~~~~~~~~~~~~~
 
-(*6.1-series*)
+(*Upcoming Rapid Releases*)
 
-:ref:`release-notes-6.1`
+- :ref:`release-notes-6.2`
+- :ref:`release-notes-6.1`
 
 .. include:: /includes/in-dev.rst
 
@@ -22,6 +23,7 @@ Upcoming Rapid Release
    :maxdepth: 1
    :hidden:
 
+   /release-notes/6.2
    /release-notes/6.1
 
 Current Stable Release
