DOCS-15822-release-notes-6.0.4 (#2461)

--- a/source/includes/changelogs/releases/6.0.4.rst
+++ b/source/includes/changelogs/releases/6.0.4.rst
@@ -14,6 +14,8 @@ Sharding
   shards end up with different prepareUnique and unique index settings
 - :issue:`SERVER-70793` Make database metadata refresh first check new
   metadata under the IS lock before taking X lock
+- :issue:`SERVER-71092` shard_id_test.cpp relies on a pure behavior of
+  std::string::compare function
 - :issue:`SERVER-71689` Refresh the CatalogCache before dropping the
   local collection
 - :issue:`SERVER-72301` Use ordered:false when inserting chunks in
@@ -45,7 +47,7 @@ Internals
   TestRemainingInitialSyncEstimatedMillisMetric unit test can be 0 ms
 - :issue:`SERVER-65259` Cursor leak in aggregation that requires merging
   on shard
-- :issue:`SERVER-65385` Disable signal processing for Google
+- :issue:`SERVER-65385` Disable threshold checks for Google
   Microbenchmarks on DEBUG/Sanitizer variants
 - :issue:`SERVER-66337` Ensure that check for the interrupt is done on
   every getNext() call in datasize_kill_op.js
@@ -60,6 +62,8 @@ Internals
   clustered collections
 - :issue:`SERVER-67406` Sorting a cursor on sharded coll returns
   documents that are missing $-prefixed fields
+- :issue:`SERVER-67795` Add serverstatus tracking to know how many users
+  use updateMany and DeleteMany
 - :issue:`SERVER-67898` BalancerCollectionStatus return wrong chunk size
   for session collection
 - :issue:`SERVER-68125` Index build on multi-key fields can consume more
@@ -84,8 +88,10 @@ Internals
   shardCollection
 - :issue:`SERVER-69890` Concurrent movePrimary and removeShard can move
   database to a no-longer existent shard
-- :issue:`SERVER-69944` Resmoke's globstar.py does not properly parse *
-  before **
+- :issue:`SERVER-69902` Stop bucket_unpacking_with_sort_plan_cache.js
+  from running in parallel with fsyncLock tests
+- :issue:`SERVER-69944` Resmoke's globstar.py does not properly parse
+  ``*`` before ``**``
 - :issue:`SERVER-70024` ldap_provider_check.js needs to be updated for
   rhel9
 - :issue:`SERVER-70100` Ensure that shardCollection emits an oplog event
@@ -96,8 +102,11 @@ Internals
   object too large
 - :issue:`SERVER-70323` Convert invariant to tassert in
   collection_sharding_runtime
+- :issue:`SERVER-70394` Fix self-swap in
+  MultiPlanStage::removeRejectedPlans
 - :issue:`SERVER-70553` Add module support to the mongo test runner
 - :issue:`SERVER-70594` Add updated build variants to sys-perf
+- :issue:`SERVER-70694` Platform Support: Add support for RHEL9 ARM64
 - :issue:`SERVER-70720` Evergreen for WT should capture parent process
   id as part of top output
 - :issue:`SERVER-70768` balancer use wrong chunk size for jumbo chunks
@@ -155,6 +164,8 @@ Internals
 - :issue:`SERVER-71609` splitOrMarkJumbo must not over-split chunks
 - :issue:`SERVER-71614` Add a case to accept to hide an index if it is
   not compatible with shard key
+- :issue:`SERVER-71632` Re-enable dropDatabase FSM test in stepdown
+  suites
 - :issue:`SERVER-71638` Don't let to hide the last shard key index using
   a key pattern
 - :issue:`SERVER-71666` Reduce number of scanned index entries on chunk
@@ -170,6 +181,7 @@ Internals
 - :issue:`SERVER-71759` dataSize command doesn't yield
 - :issue:`SERVER-71769` Add a new log message when a secondary node is
   skipping a two-phase index build
+- :issue:`SERVER-71771` Defragmenter should cap chunk size estimation
 - :issue:`SERVER-71787` Balancer needs to attach forceJumbo to moveRange
   command
 - :issue:`SERVER-71788` Defragmentation should handle ChunkTooBig errors
@@ -177,6 +189,7 @@ Internals
   fromMigrate=true does not abort index builds
 - :issue:`SERVER-71921` Task update_timeseries_fuzzer times out on some
   variants
+- :issue:`SERVER-71924` Reduce verbosity of chunk merge change log event
 - :issue:`SERVER-71939` Update BucketCatalogTest::Task class with
   failpoint
 - :issue:`SERVER-71982` Add directConnection=True to standalone.py for
@@ -193,6 +206,8 @@ Internals
   orphanCleanupDelaySecs to the default value on teardown
 - :issue:`SERVER-72222` MapReduce with single reduce optimization fails
   when merging results in sharded cluster
+- :issue:`SERVER-72276` Remove all outdated entries from
+  backports_required_for_multiversion_tests.yml
 - :issue:`SERVER-72288` microbenchmark tests fail after "Enable M1 Mac
   support for DSI"
 - :issue:`SERVER-72408` Default timeout for
@@ -206,10 +221,16 @@ Internals
 - :issue:`SERVER-72506` Fix key error in benchmarks analysis script
 - :issue:`SERVER-72533` Shards must send validAfter field on
   _configsvrCommitChunksMerge on v6.0
+- :issue:`SERVER-72535` Sharded clusters allow creating the 'admin',
+  'local', and 'config' databases with alternative casings
 - :issue:`SERVER-72581` Increase timeout for
   replica_sets_jscore_passthrough on macos-arm64 variant
 - :issue:`SERVER-72613` Speed up taking core dumps with the hang
   analyzer
+- :issue:`SERVER-72831` Fix use after move in
+  sharding_util::processShardResponses
+- :issue:`SERVER-72877` Mongos retargeting logic in stepdown hooks
+  should skip views
 - :issue:`WT-9268` Delay deletion of the history store record to
   reconciliation
 - :issue:`WT-9428` Fix two asserts in rec_visibility.c
