--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -9,15 +9,17 @@ information on types of MongoDB releases, see
 
 To see changes in MongoDB releases, see the following release notes.
 
-Upcoming Rapid Releases
-~~~~~~~~~~~~~~~~~~~~~~~
-
-(*Upcoming Rapid Releases*)
+Upcoming Rapid Release
+~~~~~~~~~~~~~~~~~~~~~~
 
 - :ref:`release-notes-6.2`
-- :ref:`release-notes-6.1`
 
 .. include:: /includes/rapid-release.rst
+
+Current Rapid Relase
+~~~~~~~~~~~~~~~~~~~~
+
+- :ref:`release-notes-6.1`
 
 .. toctree::
    :maxdepth: 1
