(DOCS-15923): Finalize 4.2.24 release notes (#2636)

--- a/source/includes/changelogs/releases/4.2.24.rst
+++ b/source/includes/changelogs/releases/4.2.24.rst
@@ -18,11 +18,15 @@ Aggregation
 Internals
 ~~~~~~~~~
 
+- :issue:`SERVER-52545` Specify input/output to listIndexes command in
+  IDL
 - :issue:`SERVER-58047` $toHashedIndexKey expression doesn't add any
   dependencies
 - :issue:`SERVER-58673` Enable featureFlagPerShardCursor
 - :issue:`SERVER-61032` Convert all references to
   /opt/mongodbtoolchain/gdb to a versioned equivalent
+- :issue:`SERVER-62201` Remove all outdated entries from
+  backports_required_for_multiversion_tests.yml
 - :issue:`SERVER-62400` Add $_passthroughToShard parameter to
   AggregateCommandRequest
 - :issue:`SERVER-62681` Create change streams per shard cursor
@@ -41,6 +45,8 @@ Internals
   trigger
 - :issue:`SERVER-68126` Check for negative maxChunkSize input value in
   AutoSplitVector
+- :issue:`SERVER-68470` Amazon Linux 4.2/4.4 RPMs fail to install due to
+  missing shadow-utils
 - :issue:`SERVER-68901` Incorrect $elemMatch query analysis in
   mongocryptd if document contains 2 different fields with the same name
 - :issue:`SERVER-69001` Initial sync should set the minValid document to
@@ -51,13 +57,12 @@ Internals
   universally callable
 - :issue:`SERVER-69569` Python scripts failing in Evergreen tasks
 - :issue:`SERVER-69785` robustify change_streams_per_shard_cursor.js
-- :issue:`SERVER-69944` Resmoke's globstar.py does not properly parse
-  ``*`` before ``**``
+- :issue:`SERVER-69944` Resmoke's globstar.py does not properly parse *
+  before **
 - :issue:`SERVER-70299` Remove JSON.send command usage
 - :issue:`SERVER-70348` Remove EAGAIN for queryable WT and retry
   internally
-- :issue:`SERVER-70394` Fix self-swap in
-  MultiPlanStage::removeRejectedPlans
+- :issue:`SERVER-70427` Remove chef+kitchen package test infrastructure
 - :issue:`SERVER-70469` Use virtual env python in watchdog tests
 - :issue:`SERVER-70483` Update Resmoke to pass "evergreen_execution" up
   to logkeeper.
@@ -82,10 +87,29 @@ Internals
 - :issue:`SERVER-71772` Update ARM builds to target armv8.2-a on older
   branches
 - :issue:`SERVER-71875` Stop run jstestfuzz on rhel62
+- :issue:`SERVER-71950` Fail and log the operation when out-of-order
+  keys are detected in WiredTiger
 - :issue:`SERVER-72137` Handle case when test stats are not available
+- :issue:`SERVER-72276` Remove all outdated entries from
+  backports_required_for_multiversion_tests.yml
 - :issue:`SERVER-72288` microbenchmark tests fail after "Enable M1 Mac
   support for DSI"
 - :issue:`SERVER-72294` Upgrade all uses of sus12 to suse12-sp5
+- :issue:`SERVER-72512` Indexes reported as valid when unable to return
+  inconsistencies due to memory limit
 - :issue:`SERVER-72535` Sharded clusters allow creating the 'admin',
   'local', and 'config' databases with alternative casings
+- :issue:`SERVER-73481` Validate does not detect out-of-order keys with
+  {full: false}
+- :issue:`SERVER-73636` Coverity analysis defect 135025: Inefficient
+  vector resizing with reserve.
+- :issue:`SERVER-73706` Save WTRecordStoreUassertOutOfOrder fail point
+  state to prevent concurrency bugs in testing
+- :issue:`SERVER-73986` [v4.2] Skip running validate_out_of_order.js on
+  ephemeralForTest
+- :issue:`WT-9477` Don't allow checkpoint triggering internal page split
+  which leads to corrupted internal page in the checkpoint
+- :issue:`WT-10461` Fix key out of order in skip list on weakly ordered
+  architecture
+- :issue:`WT-10584` Add missing read barriers in __cursor_skip_prev
 
