--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -9,17 +9,12 @@ information on types of MongoDB releases, see
 
 To see changes in MongoDB releases, see the following release notes.
 
-Upcoming Rapid Release
-~~~~~~~~~~~~~~~~~~~~~~
-
-- :ref:`release-notes-6.2`
-
 .. include:: /includes/rapid-release.rst
 
-Current Rapid Relase
-~~~~~~~~~~~~~~~~~~~~
+Current Rapid Release
+~~~~~~~~~~~~~~~~~~~~~
 
-- :ref:`release-notes-6.1`
+- :ref:`release-notes-6.2`
 
 .. toctree::
    :maxdepth: 1
@@ -33,7 +28,7 @@ Current Stable Release
 
 (*6.0-series*)
 
-:ref:`release-notes-6.0`
+- :ref:`release-notes-6.0`
 
 .. toctree::
    :maxdepth: 1
@@ -44,6 +39,7 @@ Current Stable Release
 Previous Rapid Releases
 ~~~~~~~~~~~~~~~~~~~~~~~
 
+- :ref:`release-notes-6.1`
 - :ref:`release-notes-5.3`
 - :ref:`release-notes-5.2`
 - :ref:`release-notes-5.1`
@@ -52,6 +48,7 @@ Previous Rapid Releases
    :maxdepth: 1
    :hidden:
 
+   /release-notes/6.1
    /release-notes/5.3
    /release-notes/5.2
    /release-notes/5.1
@@ -89,6 +86,7 @@ EOL'ed Releases
    :maxdepth: 1
    :hidden:
 
+   /release-notes/6.0
    /release-notes/5.0
    /release-notes/4.4
    /release-notes/4.2
