--- a/source/release-notes.txt
+++ b/source/release-notes.txt
@@ -12,18 +12,18 @@ To see changes in MongoDB releases, see the following release notes.
 Upcoming Rapid Release
 ~~~~~~~~~~~~~~~~~~~~~~
 
-.. include:: /includes/rapid-release.rst
-
 (*6.3-series*)
 
-- :ref:`release-notes-6.3`
-
 .. include:: /includes/in-dev.rst
+
+- :ref:`release-notes-6.3`
 
 Current Rapid Release
 ~~~~~~~~~~~~~~~~~~~~~
 
 (*6.2-series*)
+
+.. include:: /includes/rapid-release-short.rst
 
 - :ref:`release-notes-6.2`
 
