docsp-29133 - add tabs (#2923)
* add tabs

* autobuilder

--- a/source/core/queryable-encryption/install.txt
+++ b/source/core/queryable-encryption/install.txt
@@ -35,6 +35,35 @@ in your development environment:
   dependencies for your driver, select the tab corresponding to the language you
   would like to use to complete this guide:
 
+.. _qe-quick-start-driver-dependencies:
+
+.. tabs-drivers::
+
+   .. tab::
+      :tabid: java-sync
+
+      .. include:: /includes/queryable-encryption/set-up/java.rst
+
+   .. tab::
+      :tabid: nodejs
+
+      .. include:: /includes/queryable-encryption/set-up/node.rst
+
+   .. tab::
+      :tabid: python
+
+      .. include:: /includes/queryable-encryption/set-up/python.rst
+
+   .. tab::
+      :tabid: csharp
+
+      .. include:: /includes/queryable-encryption/set-up/csharp.rst
+
+   .. tab::
+      :tabid: go
+
+      .. include:: /includes/queryable-encryption/set-up/go.rst
+
 
 Learn More
 ----------
